[gd_scene load_steps=7 format=3 uid="uid://dbegfmaigk5ur"]

[ext_resource type="Script" path="res://scripts/harvestable/harvestable.gd" id="1_lud0o"]
[ext_resource type="Texture2D" uid="uid://cf2o246l8niy7" path="res://art/gui/interactable/ui elements.png" id="2_vx7ht"]
[ext_resource type="Texture2D" uid="uid://dd0wbw0jduqhe" path="res://art/gui/item/tools.png" id="3_8wwuq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cij3v"]
atlas = ExtResource("2_vx7ht")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldavp"]
atlas = ExtResource("3_8wwuq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_5xslu"]
radius = 66.3099

[node name="Harvestable" type="StaticBody2D" groups=["resource"]]
y_sort_enabled = true
collision_layer = 9
collision_mask = 0
script = ExtResource("1_lud0o")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="CueSprite" type="Sprite2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_cij3v")
offset = Vector2(0, -8)

[node name="ToolHintSprite" type="Sprite2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_ldavp")
offset = Vector2(0, -6)

[node name="Collision" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(0, -26)

[node name="CueArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Detect" type="CollisionShape2D" parent="CueArea"]
visible = false
shape = SubResource("CircleShape2D_5xslu")

[connection signal="body_entered" from="CueArea" to="." method="_on_cue_area_body_entered"]
[connection signal="body_exited" from="CueArea" to="." method="_on_cue_area_body_exited"]
